--- a/BSCScan-Helper/App.config
+++ b/BSCScan-Helper/App.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
-		<appSettings>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+	</startup>
+	<appSettings>
 		<add key="Server" value="bscscan.com" />
 		<add key="UseInstantcopy" value="false" />
+		<add key="AllowNotifications" value="true" />
 		<add key="ClientSettingsProvider.ServiceUri" value="" />
 	</appSettings>
 
